--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,5 @@ body {
 @import 'blocks/promo';
 @import 'blocks/header.scss';
 @import 'blocks/buttoms';
+@import 'blocks/benefits';
+@import 'blocks/media';
