--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,7 @@ body {
 @import 'blocks/header.scss';
 @import 'blocks/buttoms';
 @import 'blocks/benefits';
+@import 'blocks/consultation'; 
+@import 'blocks/forms'; 
+
 @import 'blocks/media';
