--- a/src/sass/blocks/_buttoms.scss
+++ b/src/sass/blocks/_buttoms.scss
@@ -17,4 +17,11 @@
         font-size: 16px;
         line-height: 25px;
     }
+
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-size: 16px;
+        line-height: 25px;
+    }
 }
