--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,7 +1,7 @@
 .consultation {
     min-height: 680px;
     padding: 100px 0 108px 0;
-    background: url(../../img/consultation_bg.jpg) center (center/cover) no-repeat;
+    background: url(../img/consultation_bg.jpg) center (center/cover) no-repeat;
     color: #fff;
 
     &__title {
