--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,5 +15,6 @@ body {
 @import 'blocks/benefits';
 @import 'blocks/consultation'; 
 @import 'blocks/forms'; 
+@import 'blocks/carousel.scss'; 
 
 @import 'blocks/media';
