--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,5 +17,6 @@ body {
 @import 'blocks/consultation'; 
 @import 'blocks/forms'; 
 @import 'blocks/carousel.scss'; 
+@import 'blocks/catalog'; 
 
 @import 'blocks/media';
