--- a/src/sass/blocks/_buttoms.scss
+++ b/src/sass/blocks/_buttoms.scss
@@ -24,4 +24,10 @@
         font-size: 16px;
         line-height: 25px;
     }
+
+    &_mini {
+        width: 131px;
+        height: 40px;
+        font-size: 14px;
+    }
 }
