--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -14,6 +14,7 @@
         &__contacts {
             padding: 0 15px;
         }
+
         &__phone {
             margin: 0 auto;
             font-size: 16px;
@@ -33,12 +34,37 @@
         }
     }
 
-    .consultation{
+    .consultation {
         padding: 100px 15px 108px 15px;
     }
 }
 
-@media (max-width: 767px) {}
+@media (max-width: 767px) {
+    .carousel {
+        padding: 40px 0;
+
+        &__inner {
+            width: 550px;
+        }
+    }
+
+    .catalog {
+        padding-bottom: 40px;
+
+        &__title {
+            font-size: 18px;
+        }
+
+        &__tabs {
+            margin: 0 10px;
+            flex-wrap: wrap;
+        }
+
+        &__tab {
+            margin: 5px;
+        }
+    }
+}
 
 @media (max-width: 575px) {
     .promo {
@@ -89,9 +115,11 @@
 
     .benefits {
         padding: 40px 0 40px 0;
+
         &__items {
             margin-top: 20px;
         }
+
         &__title {
             font-size: 18px;
         }
@@ -101,10 +129,12 @@
         min-height: auto;
         padding: 40px 15px;
         text-align: center;
+
         &__title {
             font-size: 18px;
             line-height: 28px;
         }
+
         &__descr {
             font-size: 16px;
             line-height: 24px;
@@ -113,5 +143,11 @@
 
     .feed-form {
         width: 100%;
+    }
+
+    .carousel {
+        &__inner {
+            width: 320px;
+        }
     }
 }
