--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,5 +18,6 @@ body {
 @import 'blocks/forms'; 
 @import 'blocks/carousel.scss'; 
 @import 'blocks/catalog'; 
+@import 'blocks/reviews.scss'; 
 
 @import 'blocks/media';
