--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -37,6 +37,10 @@
     .consultation {
         padding: 100px 15px 108px 15px;
     }
+
+    .reviews {
+        padding: 0 15px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -148,6 +152,41 @@
     .carousel {
         &__inner {
             width: 320px;
+        }
+    }
+
+    .reviews {
+        padding-bottom: 40px;
+        &__title {
+            font-size: 21px;
+        }
+
+        &-item {
+            margin-top: 20px;
+
+            &__round {
+                margin-right: 15px;
+
+                img {
+                    width: 50px;
+                    height: 50px;
+                }
+            }
+
+            &__name {
+                font-size: 18px;
+            }
+    
+            &__subt {
+                font-size: 16px;
+            }
+    
+            &__text {
+                font-size: 14px;
+                p {
+                    margin-top: 10px;
+                }
+            }
         }
     }
 }
