--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,5 +19,6 @@ body {
 @import 'blocks/carousel.scss'; 
 @import 'blocks/catalog'; 
 @import 'blocks/reviews.scss'; 
+@import 'blocks/footer.scss'; 
 
 @import 'blocks/media';
