--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -157,6 +157,7 @@
 
     .reviews {
         padding-bottom: 40px;
+
         &__title {
             font-size: 21px;
         }
@@ -176,17 +177,37 @@
             &__name {
                 font-size: 18px;
             }
-    
+
             &__subt {
                 font-size: 16px;
             }
-    
+
             &__text {
                 font-size: 14px;
+
                 p {
                     margin-top: 10px;
                 }
             }
         }
     }
+
+    .footer {
+        &__info {
+            width: 100%;
+            height: 220px;
+            padding: 25px 15px;
+            font-size: 16px;
+        }
+    }
+
+    .modal {
+        width: 280px;
+
+        &__close {
+            top: -36px;
+            right: -3px;
+        }
+    }
+
 }
