--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -16,4 +16,14 @@
         font-size: 20px;
         line-height: 30px;
     }
+
+    .error {
+        border: 1px solid red;
+    }
+
+    label.error {
+        border: none;
+        margin-bottom: 15px;
+        text-align: center;
+    }
 }
