--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -45,6 +45,15 @@
     &_mini {
         min-height: 143px;
     }
+
+    .error {
+        border: 1px solid red;
+    }
+
+    label.error {
+        border: none;
+        margin-bottom: 15px;
+    }
 }
 
 #consultation, #order, #thanks {
