--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,5 +21,6 @@ body {
 @import 'blocks/reviews.scss'; 
 @import 'blocks/footer.scss';
 @import 'blocks/modal';
+@import 'blocks/pageup.scss';
 
 @import 'blocks/media';
