--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,6 +9,7 @@
         font-size: 36px;
         line-height: 54px;
         text-transform: uppercase;
+        margin-bottom: 0;
     }
 
     &__descr {
