--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -16,6 +16,7 @@
         line-height: 30px;
         text-transform: uppercase;
         text-align: center;
+        margin-bottom: 0;
     }
 
     &__items {
