--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -8,6 +8,7 @@
         line-height: 45px;
         text-transform: uppercase;
         text-align: center;
+        margin-bottom: 0;
     }
 
     &__tabs {
