--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -7,6 +7,7 @@
         line-height: 30px;
         text-align: center;
         text-transform: uppercase;
+        margin-bottom: 0;
     }
 
     &-item {
